--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ICHOR GAMES!</title>
+    <title>ICHOR GAMES</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
